--- a/elements.html
+++ b/elements.html
@@ -1131,13 +1131,13 @@
 						cursor: pointer;
 						margin-left: 25px;
 					}
-					.social-i svg {
-						max-height: 2rem;
-						max-width: 2rem;
-					}
 
 					.social-i:first-child {
 						margin-left: 0;
+					}
+					.social-i svg {
+						max-height: 2rem;
+						max-width: 2rem;
 					}
 
 					.social-i path {
@@ -1169,7 +1169,7 @@
 						</svg>
 					</a>
 					<a href="https://www.youtube.com/channel/UCLmXkY_5svzGN0XNiG4s-Tw" target="_blank" class="social-i _menu">
-						<svg id="Layer_1" version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="27.014px" height="20px" viewbox="0 0 27.014 20" enable-background="new 0 0 27.014 20" xml:space="preserve">
+						<svg version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="27.014px" height="20px" viewbox="0 0 27.014 20" enable-background="new 0 0 27.014 20" xml:space="preserve">
 							<path fill="#000" d="M26.743,5.1c0,0-0.264-1.862-1.073-2.682c-1.027-1.076-2.179-1.082-2.706-1.145		C19.183,1,13.513,1,13.513,1h-0.012c0,0-5.67,0-9.451,0.273C3.522,1.336,2.372,1.342,1.344,2.418C0.534,3.237,0.271,5.1,0.271,5.1		S0,7.285,0,9.472v2.048c0,2.186,0.271,4.373,0.271,4.373s0.264,1.861,1.074,2.682c1.027,1.076,2.377,1.041,2.978,1.154		C6.483,19.936,13.507,20,13.507,20s5.676-0.01,9.457-0.283c0.527-0.063,1.679-0.066,2.706-1.143		c0.81-0.82,1.073-2.682,1.073-2.682s0.271-2.188,0.271-4.373V9.472C27.014,7.285,26.743,5.1,26.743,5.1z M10.718,14.004		l-0.001-7.59l7.3,3.809L10.718,14.004z" class="menu-yt-path"></path>
 						</svg>
 					</a>
