--- a/contacts.html
+++ b/contacts.html
@@ -34,7 +34,7 @@
 			<strong class="logo__img">AZToys</strong>
 		</a>
 	</div>
-	<img class="logo__print" src="img/logo.png" alt="logo">
+	<img class="logo__print" src="img/logo-print.png" alt="aztoys">
 	<!--logo end-->
 	<!--btn menu-->
 	<a href="#" class="btn-menu">
